README with Java execution instructions
Added instructions for compiling and running Java program.