@@ -3,3 +3,11 @@ Descargar el JDK de 32 bits de java (registrarse si es necesario)
 `https://www.oracle.com/java/technologies/downloads/#java8`
 
 Una vez descargados los dos archivo de java carpeta de `user` que se encuentra en `Windows-SSD`, damos clic en nuestro perfil y lo agregamos esos dos archivo.
+
+**Para ejecutar**
+Abrimos la terminal(cmd) 
+Compilamos con: `javac -cp jSerialComm-1.3.11.jar LeerSerial.java`
+Ejecutar: `java --enable-native-access=ALL-UNNAMED -cp ".;jSerialComm-1.3.11.jar"
+LeerSerial`
+
+
